# gitbutler

./: .gitignore  .oxlintignore  .prettierignore  CODEOWNERS  Cargo.toml  flake.nix  knip.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: copilot-instructions.md
.github/workflows/: lite.yml  osv-scanner.yml  publish.yaml  push-e2e-img.yml  push.yaml  test-e2e-blackbox.yml  test-e2e-playwright.yml  test-e2e.yml  zizmor.yml
apps/desktop/: package.json  svelte.config.js
apps/lite/: AGENTS.md  oxlint.config.ts  package.json
apps/web/: package.json
crates/: AGENTS.md
crates/but/: Cargo.toml  agents.md
crates/but-action/: Cargo.toml
crates/but-api/: Cargo.toml
crates/but-askpass/: Cargo.toml
crates/but-claude/: Cargo.toml
crates/but-ctx/: Cargo.toml
crates/but-db/: Cargo.toml
crates/but-debug/: Cargo.toml
crates/but-debug/src/: args.rs  lib.rs  main.rs  metadata.rs  trace.rs
crates/but-debug/src/command/: graph.rs  mod.rs
crates/but-forge/: Cargo.toml
crates/but-forge-storage/: Cargo.toml
crates/but-graph/: Cargo.toml
crates/but-meta/: Cargo.toml
crates/but-napi/: Cargo.toml
crates/but-oplog/: Cargo.toml
crates/but-rebase/: Cargo.toml
crates/but-server/: Cargo.toml  build.rs
crates/but-settings/: Cargo.toml
crates/but-testing/: Cargo.toml
crates/but-tools/: Cargo.toml
crates/but-workspace/: Cargo.toml
crates/gitbutler-branch/: Cargo.toml
crates/gitbutler-branch-actions/: Cargo.toml
crates/gitbutler-edit-mode/: Cargo.toml
crates/gitbutler-git/: Cargo.toml
crates/gitbutler-operating-modes/: Cargo.toml
crates/gitbutler-oplog/: Cargo.toml
crates/gitbutler-project/: Cargo.toml
crates/gitbutler-repo/: Cargo.toml
crates/gitbutler-repo-actions/: Cargo.toml
crates/gitbutler-repo-actions/src/: repository.rs
crates/gitbutler-stack/: Cargo.toml
crates/gitbutler-tauri/: Cargo.toml  (+1 more)
crates/gitbutler-user/: Cargo.toml
crates/gitbutler-user/src/: api.rs
e2e/: README.md  package.json
scripts/: release.sh
(+875 files in other folders)
