[package]
name = "but-debug"
version = "0.0.0"
edition.workspace = true
repository.workspace = true
license-file = "../../LICENSE.md"
description = "A GitButler debugging CLI"
authors.workspace = true
publish = false
rust-version.workspace = true

[[bin]]
name = "but-debug"
path = "src/main.rs"
doctest = false

[dependencies]
but-core.workspace = true
but-graph.workspace = true
anyhow.workspace = true
clap = { workspace = true, features = [
    "env",
    "wrap_help",
    "color",
    "error-context",
    "usage",
    "suggestions",
] }
gix.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["std", "fmt"] }

[lints]
workspace = true
