[package]
name = "gitbutler-user"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
publish = false
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
but-secret.workspace = true
but-utils = { workspace = true, features = ["legacy"] }
but-path.workspace = true

anyhow.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["arbitrary_precision"] }

[dev-dependencies]
serial_test = "3.2.0"
tempfile.workspace = true
keyring.workspace = true

[lints]
workspace = true
